--- a/Homework/css/_secGoods.scss
+++ b/Homework/css/_secGoods.scss
@@ -93,19 +93,7 @@
     }
 }
 
-.icon {
-    display: inline-block;
-    -webkit-mask-image: url(../img/nav_right_icon03.svg);
-    mask-image: url(../img/nav_right_icon03.svg);
-    -webkit-mask-size: contain;
-    mask-size: contain;
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    width: 26px;
-    height: 26px;
-    background: $whiteOnBlackColor;
-    margin-right: 11px;
-}
+@import "iconColored";
 
 .button__container {
     cursor: pointer;
