--- a/Homework/css/catalog.css
+++ b/Homework/css/catalog.css
@@ -225,6 +225,9 @@ details[open] .details__box {
   font-size: 14px;
   line-height: 17px;
 }
+.arrival__subheader span {
+  color: #f16d7f;
+}
 .arrival__menu {
   display: grid;
   gap: 30px;
@@ -453,8 +456,8 @@ details[open] .details__box {
 
 .icon {
   display: inline-block;
-  -webkit-mask-image: url(../img/nav_right_icon03.svg);
-  mask-image: url(../img/nav_right_icon03.svg);
+  -webkit-mask-image: url(../img/icons/Cart_icon.svg);
+  mask-image: url(../img/icons/Cart_icon.svg);
   -webkit-mask-size: contain;
   mask-size: contain;
   -webkit-mask-repeat: no-repeat;
